    . New vpComedi and vpForceTorqueAtiSensor classes to get synchonous
      data from ATI F/T sensors
    . New vpRealSense class, a wrapper open RealSense SDK to capture
      data from RS300, F200, R200 RGB-depth sensors
    . New cross platform multi-threading capabilities with vpMutex and
      vpThread classes
    . Crosscompiling capabilities tested for Raspberry Pi target
    . OSX/iOS framework creation with support of OpenCV 3rd party
    . Introduce SSE2, SSE3 and SSSE3 optimizations
    . New meta-header visp3/visp.h that allows to include all ViSP headers
      in one line
    . New meta-header visp3/visp_<module>.h that allows to include all the
      headers of a given module in one line
    . When using cxx11 support (USE_CPP11=ON), the corresponding compiler
      flag is propagated to the project that use ViSP as 3rd party
    . In vpServo introduce setCameraDoF() that allows to turn off the usage
      of some dof
  - Tutorials
    . New tutorial: How to use multi-threading capabilities
    . New tutorial: Crosscompilation for Raspberry Pi from Ubuntu host
    . New tutorial: Installation from prebuilt packages for Arch Linux
    . New tutorial: Installation from prebuilt packages for ROS
    . New tutorial: Installation from prebuilt packages for iOS devices
    . New tutorial: Installation from source for iOS devices
    . New tutorial: How to create a basic iOS application that uses ViSP
    . New tutorial: Image processing on iOS
  - Bug fixed
    . [#37] How to build for ios? build failed
    . [#38] Wrong urls in visp/doc/tutorial-calibration.doc
    . [#39] Meta header files visp_<module>.h not installed
    . [#40] vpKeyPoint fails to R/W database on big endian arch
    . [#42] Fails to build on Fedora 23 with Coin3-devel
    . [#44] Reshape issue with vpRowVector or vpColVector
    . [#47] Build issue in vpMath.h around vpMath::sign()
    . [#48] Fix vpPoseVector::getThetaUVector() to return the adequate vector